--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "dependencies": {
     "db-finger": "^2.0.4",
-    "diabetes": "^1.0.7",
-    "extension-framework": "^2.0.1",
+    "diabetes": "^1.0.10",
+    "extension-framework": "^2.0.3",
     "gulp": "^4.0.0",
-    "npm": "^6.8.0",
+    "merge-stream": "^1.0.1",
+    "npm": "^6.9.0",
     "promiseutil": "^2.0.1"
   }
 }
